cmake_minimum_required(VERSION 2.6)
project(hw1)
aux_source_directory(./src DIR_SRCs)
message(STATUS ${OUTPUT_FILE_NAME})

set(MAIN_FILE ./main.cpp)
set(ALL_SOURCE_DIRECTORY ${MAIN_FILE} ${DIR_SRCs})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../build)
add_executable(${OUTPUT_FILE_NAME}.out ${ALL_SOURCE_DIRECTORY})
SET(CMAKE_CXX_FLAGS "-std=c++11 -g")
# SET(BUILD_COMMAND_LINE /usr/bin/make)
# build_command(${BUILD_COMMAND_LINE} ALL_BUILD)
# install(TARGETS myTest.out RUNTIME DESTINATION ../build)
